# app/routes/router.go
@@ -104,5 +104,6 @@ func InitRouter(db *gorm.DB, e *echo.Echo) {
 
 	//define routes/ endpoint Booking
 	e.POST("/bookings", bookingHandlerAPI.CreateBooking, middlewares.JWTMiddleware())
+	e.PUT("/bookings/:id", bookingHandlerAPI.CancleBookingById, middlewares.JWTMiddleware())
 	e.POST("/bookings/notification", bookingHandlerAPI.WebhoocksNotification)
 }
